--- a/Practice/home.html
+++ b/Practice/home.html
@@ -22,7 +22,9 @@
     </header>
     <section>
         <nav>
-           
+           <ul>
+            <li> <a href="www.google.com">Google.com</a></li>
+           </ul>
         </nav>
     </section>
 </body>
